@@ -3,7 +3,18 @@ Section: math
 Priority: optional
 Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas B. Mundt <andi@debian.org>
-Build-Depends: debhelper (>= 9.0.0), libticables-dev (>= 1.2.0), libticalcs-dev (>= 1.1.0), libtifiles-dev (>= 1.1.0), libticonv-dev (>= 1.1.0), libgtk2.0-dev, libglade2-dev, zlib1g-dev, gettext, groff-base, autotools-dev, libarchive-dev
+Build-Depends: autotools-dev,
+               debhelper (>= 9.0.0),
+               gettext,
+               groff-base,
+               libarchive-dev,
+               libglade2-dev,
+               libgtk2.0-dev,
+               libticables-dev (>= 1.3.4),
+               libticalcs-dev (>= 1.1.8),
+               libticonv-dev (>= 1.1.4),
+               libtifiles-dev (>= 1.1.6),
+               zlib1g-dev
 Standards-Version: 3.9.4
 Homepage: http://lpg.ticalc.org/prj_gfm/
 Vcs-Git: git://git.debian.org/git/debian-science/packages/gfm.git
@@ -11,11 +22,11 @@ Vcs-Browser: http://git.debian.org/?p=debian-science/packages/gfm.git
 
 Package: gfm
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: tilp2
 Description: Texas Instruments hand-helds file manipulation program for X
  The GFM is an application allowing to manipulate single/group/tigroup files of
- all Texas Instruments hand-helds. It can create a new file, open an  existing
+ all Texas Instruments hand-helds. It can create a new file, open an existing
  file, save file, rename variables, remove variables, create folders, group
  files into a group/tigroup file, ungroup a group/tigroup file into single
  files.
