@@ -10,4 +10,7 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@  --with autotools-dev
+	dh $@
+
+override_dh_clean:
+	dh_clean --exclude=build/mingw/gfm.rc~
