@@ -1,6 +1,13 @@
 gfm (1.07-1) UNRELEASED; urgency=low
 
+  * Team maintained in Debian-Science now. (Closes: #678869)
   * New upstream release.
+  * Bumped versions of libti* dependencies for compatibility and
+    stability.
+  * Added debian/watch to enable upstream update tracking.
+  * Updated to packaging format 3.0, bumped debian/compat to 9 and updated
+    debhelper version to 9.
+  * Bumped Standards-Version to 3.9.4.
 
  -- Andreas B. Mundt <andi@debian.org>  Mon, 10 Jun 2013 16:39:14 +0200
 
